--- a/style.css
+++ b/style.css
@@ -1,12 +1,25 @@
 body {
   display: flex;
-  flex-direction: row;
+  flex-direction:column;
+
 }
 
+html{
+  background-color: black;
+
+}
 body div {
+
   text-align: center;
   width: 75%;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   margin: 0 auto;
   padding: 10px;
+  color: white;
+}
+h1{
+  color: red;
+}
+#Name-AI{
+  height: 100px
 }
