--- a/style.css
+++ b/style.css
@@ -1,15 +1,20 @@
+
+
 body {
   display: flex;
-  flex-direction:column;
-
+  flex-direction: column;
+  background-image: url("img/glados.gif");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  height: auto;
 }
 
-html{
+html {
   background-color: black;
-
 }
-body div {
 
+body div {
   text-align: center;
   width: 75%;
   /* border: 1px solid black; */
@@ -17,9 +22,17 @@ body div {
   padding: 10px;
   color: white;
 }
-h1{
+
+h1 {
   color: red;
+  margin-left: 850px;
 }
-#Name-AI{
+
+#Name-AI {
   height: 100px
+}
+
+
+#advanced{
+  
 }
